# fp-agent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fpd.cpp  license.txt
INCLUDE/: CVManager.hpp  CameraManager.hpp  FTP.hpp  FTPManager.hpp  Manager.hpp  OSManager.hpp
